--- a/app/src/main/res/layout/activity_insect_scan_input.xml
+++ b/app/src/main/res/layout/activity_insect_scan_input.xml
@@ -4,106 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bluebackground"
+    android:background="#262626"
     tools:context=".InsectScanInput">
 
-    <ImageView
-        android:id="@+id/biteImage"
-        android:layout_width="384dp"
-        android:layout_height="300dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="92dp"
-        android:layout_marginLeft="92dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="92dp"
-        android:layout_marginRight="92dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
-        app:srcCompat="@drawable/honeybee" />
-
-    <Button
-        android:id="@+id/scanBiteButton"
-        android:layout_width="141dp"
-        android:layout_height="56dp"
-        android:layout_alignLeft="@+id/biteImage"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginLeft="38dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginRight="29dp"
-        android:layout_marginBottom="145dp"
-        android:background="@drawable/signinroundbutton"
-        android:text="Scan Insect"
-        android:textColor="#ffff"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView21"
-        app:layout_constraintEnd_toStartOf="@+id/uploadImage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/biteImage" />
-
-    <Button
-        android:id="@+id/uploadImage"
-        android:layout_width="141dp"
-        android:layout_height="56dp"
-        android:layout_alignTop="@+id/scanBiteButton"
-        android:layout_alignRight="@+id/biteImage"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginBottom="145dp"
-        android:text="Upload Image"
-        android:background="@drawable/signinroundbutton"
-        android:textColor="#ffff"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView21"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/biteImage" />
-
-    <ImageView
-        android:id="@+id/imageView21"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/medicalbackground" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar4"
-        android:layout_width="386dp"
-        android:layout_height="wrap_content"
-        android:background="#86e2e9"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/biteImage"
+            android:layout_width="384dp"
+            android:layout_height="300dp"
+            app:srcCompat="@drawable/honeybee" />
 
-    <Button
-        android:id="@+id/process"
-        android:layout_width="141dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
-        android:text="Process"
-        android:background="@drawable/signinroundbutton"
-        android:textColor="#ffff"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scanBiteButton" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
 
+            <Button
+                android:id="@+id/scanBiteButton"
+                android:layout_width="141dp"
+                android:layout_height="56dp"
+                android:background="@drawable/signinroundbutton"
+                android:text="Scan Insect"
+                android:textColor="#ffff"
+                android:layout_marginRight="20dp"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/uploadImage"
+                android:layout_width="141dp"
+                android:layout_height="56dp"
+                android:background="@drawable/signinroundbutton"
+                android:text="Upload Image"
+                android:textColor="#ffff"
+                android:layout_marginLeft="20dp"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/process"
+            android:layout_width="141dp"
+            android:layout_height="56dp"
+            android:text="Process"
+            android:background="@drawable/signinroundbutton"
+            android:textColor="#ffff"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
