--- a/app/src/main/res/layout/activity_scan_mode_form.xml
+++ b/app/src/main/res/layout/activity_scan_mode_form.xml
@@ -4,99 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bluebackground"
+    android:background="#262626"
     tools:context=".ScanModeForm">
 
-    <Button
-        android:id="@+id/byBiteButton"
-        android:layout_width="244dp"
-        android:layout_height="82dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginRight="70dp"
-        android:background="@drawable/signinroundbutton"
-        android:text="By Bite"
-        android:textColor="#ffff"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar17" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/byInsectButton"
-        android:layout_width="244dp"
-        android:layout_height="82dp"
-        android:layout_alignStart="@+id/byBiteButton"
-        android:layout_alignLeft="@+id/byBiteButton"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="33dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginRight="70dp"
-        android:background="@drawable/signinroundbutton"
-        android:text="By Insect"
-        android:textColor="#ffff"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/byBiteButton" />
+        <Button
+            android:id="@+id/byBiteButton"
+            android:layout_width="244dp"
+            android:layout_height="82dp"
+            android:background="@drawable/signinroundbutton"
+            android:text="By Bite"
+            android:textColor="#ffff"
+            android:textSize="36sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/backButton"
-        android:layout_width="244dp"
-        android:layout_height="82dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginBottom="112dp"
-        android:background="@drawable/submit"
-        android:text="Back"
-        android:textColor="#ffff"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/byInsectButton" />
+        <Button
+            android:id="@+id/byInsectButton"
+            android:layout_width="244dp"
+            android:layout_height="82dp"
+            android:background="@drawable/signinroundbutton"
+            android:text="By Insect"
+            android:textColor="#ffff"
+            android:textSize="36sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:textStyle="bold" />
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar17"
-        android:layout_width="395dp"
-        android:layout_height="wrap_content"
-        android:background="#86e2e9"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="244dp"
+            android:layout_height="82dp"
+            android:background="@drawable/submit"
+            android:text="Back"
+            android:textColor="#ffff"
+            android:textSize="36sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView38"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:text="Scan Mode"
-        android:textColor="#ffffff"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/toolbar17"
-        app:layout_constraintHorizontal_bias="0.482"
-        app:layout_constraintStart_toStartOf="@+id/toolbar17"
-        app:layout_constraintTop_toTopOf="@+id/toolbar17" />
-
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
