--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="login">#262626</color>
     <color name="signup">#ffffff</color>
-    <color name="dashboard">#b8d0e3</color>
+    <color name="dashboard">#B8D0E3</color>
     <color name="submit">#fa7898</color>
     <color name="colorBackground">#eeeeee</color>
 </resources>
