--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bgui"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".SplashScreen">
 
     <ImageView
         android:layout_width="140dp"
         android:layout_height="135dp"
-        android:background="@drawable/logobyteme2"
-        android:layout_marginLeft="121dp"
-        android:layout_marginTop="200dp"/>
+        android:background="@drawable/logobyteme2"/>
 
 </LinearLayout>
