--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="signup">#ffffff</color>
     <color name="dashboard">#B8D0E3</color>
     <color name="submit">#fa7898</color>
-    <color name="colorBackground">#eeeeee</color>
+    <color name="vampire">#262626</color>
+    <color name="light">#f2f2f2</color>
 </resources>
