--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,18 +10,13 @@
     <ImageView
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:background="@drawable/logobyteme2"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="150dp"/>
+        android:background="@drawable/logobyteme2"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="21dp"
-        android:layout_marginTop="320dp"
-        android:text="A MOBILE-BASED FIRST AID GUIDE TO
-        INSECT BITES"
+        android:gravity="center"
+        android:text="A MOBILE-BASED FIRST AID GUIDE TO INSECT BITES"
         android:textSize="20dp" />
 
 </RelativeLayout>
