--- a/app/src/main/res/drawable/signuproundbutton.xml
+++ b/app/src/main/res/drawable/signuproundbutton.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     android:shape="rectangle">
 
-    <solid android:color="@color/signup"/>
+    <solid android:color="@color/colorWhite"/>
     <corners android:radius="15dp" />
     <stroke
         android:width="3dp"
