--- a/app/src/main/res/layout/activity_insect_scan.xml
+++ b/app/src/main/res/layout/activity_insect_scan.xml
@@ -70,13 +70,29 @@
     <LinearLayout
         android:layout_below="@+id/linear2"
         android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
+            android:id="@+id/map_button"
+            android:gravity="center"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Search Nearest Pest Control" />
+
+        <Button
+            android:id="@+id/first_aid"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="View Treatment" />
+
+        <Button
+            android:id="@+id/get_rid"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="DIY How to get ." />
 
     </LinearLayout>
 
