--- a/app/src/main/res/layout/activity_insect_scan_input.xml
+++ b/app/src/main/res/layout/activity_insect_scan_input.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#262626"
+    android:background="@color/vampire"
     tools:context=".InsectScanInput">
 
     <LinearLayout
