--- a/app/src/main/res/layout/activity_insect_scan.xml
+++ b/app/src/main/res/layout/activity_insect_scan.xml
@@ -92,7 +92,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="DIY How to get ." />
+            android:text="DIY How to get rid." />
 
     </LinearLayout>
 
